<resources>
    <string name="app_name">书阳小说</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--播放页相关-->
    <string name="video_introduce">简介 ></string>
    <string name="video_circuit">当前来源:</string>
    <string name="video_title">播放说明</string>
    <string name="video_explain">播放内容来自全网聚合搜索，涉及内容与本APP无关，如出现版权问题，请速与本站联系！(请小伙伴支持原创哦)\n如果播放遇到视频无法播放、卡顿、没有资源或无法解析，请按照以下步骤操作：\n
    1.切换播放来源\n
    2.切换播放器\n
    3.联系管理员</string>
    <string name="video_engine">(点击切换引擎)</string>\

    <!--播放页背景与字体-->
    <drawable name="baibeijin">#d8bfbb</drawable>
    <drawable name="baiziti">#81556c</drawable>

    <drawable name="hubeijin">#bac3ae</drawable>
    <drawable name="huziti">#1d3f1f</drawable>

    <drawable name="yebeijin">#1c1e1d</drawable>
    <drawable name="yeziti">#075473</drawable>
    <drawable name="lvse">#17942f</drawable>

    <drawable name="zongbeijin">#3c3226</drawable>
    <drawable name="zongziti">#757473</drawable>

    <drawable name="baise">#fff</drawable>
    <drawable name="huise">#e6e6e6</drawable>

    <drawable name="niupi">#d1c2a5</drawable>
    <drawable name="changgui">#f5f6f8</drawable>

    <!--书籍阅读页相关-->
    <string name="read_str_up">上一章</string>
    <string name="read_str_down">下一章</string>
    <string name="read_str_msg">小提示：</string>
    <string name="read_str_msg_x">加入官方群获取最新资讯：215636017</string>
    <string name="read_str_typeface">字体：</string>
    <string name="read_str_typeface_x">体</string>
    <string name="read_str_theme">主题：</string>
    <string name="read_str_Thecustom">自定义：</string>
    <string name="read_str_error">数据获取失败......</string>
    <string name="read_str_error_x">点击重新加载</string>
    <string name="read_str_typeface_sp">已有字体</string>
    <string name="read_str_typeface_sp_x">在线字体</string>
    <string name="read_str_typeface_sp_msg">还没有字体哦，去下载吧~</string>
    <string name="read_str_web">显示原网页</string>

    
    <!--关于我们-->
    <string name="aboutus_ed">版本</string>
    <string name="aboutus_log">更新日志</string>
    <string name="aboutus_deve">开发者相关</string>
    <string name="aboutus_zhaiyang">书视聚合-B站UP:萌萌的萌大人</string>
    <string name="aboutus_liupeng">书视聚合-刘鹏</string>
    <string name="aboutus_tangpeng">书视聚合-唐鹏</string>
    <string name="aboutus_kaiyuan">开源协议及版权信息</string>
=======

    <!--写留言-->
    <string name="msg">请在这里留下你想说的话，少于200字(包括想要添加的影视、BUG和评论)</string>

    <!--放映厅相关-->
    <string name="danmubtn">发个弹幕交流一下呀</string>
</resources>
