<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fff">
  <FrameLayout
      android:id="@+id/webView"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:background="#000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="书视聚合小影城"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/textView2" />
  </FrameLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:orientation="vertical"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:background="@drawable/frame_wire">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
      <TextView
          android:id="@+id/play_name"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/app_name"
          android:textSize="18sp"
          android:gravity="bottom"
          android:maxLines="1"
          android:maxEms="12"
          android:singleLine="true"
          android:ellipsize="marquee"
          android:marqueeRepeatLimit="marquee_forever"
          android:textColor="#000"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true" />
      <TextView
          android:id="@+id/play_year"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="2018"
          android:textSize="15sp"
          android:gravity="bottom"
          android:textColor="@color/colorBackground"
          android:layout_toRightOf="@id/play_name"
          android:layout_marginLeft="10dp"/>
      <Button
          android:id="@+id/play_introduce_btn"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/video_introduce"
          android:textColor="@color/colorGray"
          android:textSize="18sp"
          android:gravity="bottom|right"
          android:layout_alignParentRight="true"
          android:background="#fff"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
      <TextView
          android:id="@+id/play_grade"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="10.0"
          android:textSize="12sp"
          android:textColor="@color/colorFen"/>
      <TextView
          android:id="@+id/play_type"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="科幻"
          android:textSize="12sp"
          android:maxEms="8"
          android:textColor="@color/colorGray"
          android:layout_toRightOf="@id/play_grade"
          android:layout_marginLeft="10dp"/>
      <Button
          android:id="@+id/play_circuitcuit"
          android:layout_width="60dp"
          android:layout_height="wrap_content"
          android:text="默认线路"
          android:textColor="@color/colorGray"
          android:layout_toRightOf="@id/play_type"
          android:background="@drawable/frame_grey"
          android:textSize="12sp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"/>
      <ImageView
          android:id="@+id/play_img"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:src="@mipmap/ic_logo_qq"
          android:layout_alignParentRight="true"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/video_circuit"
          android:textSize="15sp"
          android:gravity="center"
          android:layout_toLeftOf="@id/play_img"
          android:layout_marginRight="10dp"/>
    </RelativeLayout>
  </LinearLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:id="@+id/paly_introduce"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/frame_wire"
      android:textColor="@color/colorGray"
      android:textSize="15sp"
      android:visibility="gone"
      android:layout_marginRight="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="10dp"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/video_title"
      android:textColor="#000"
      android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_explain"
        android:textColor="@color/colorGray"
        android:textSize="13sp" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:background="@drawable/frame_top"
      android:layout_marginTop="10dp"
      android:paddingTop="10dp">
    <TextView
        android:id="@+id/play_engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_engine"
        android:textColor="#000"
        android:textSize="15sp"/>
    <com.shushijuhe.shushijuheread.view.MyGridView
        android:id="@+id/play_gtid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="5"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="2dp"
        android:stretchMode="columnWidth">
    </com.shushijuhe.shushijuheread.view.MyGridView>
  </LinearLayout>
</LinearLayout>
  </ScrollView>
</LinearLayout>