<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/public_header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ss_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@mipmap/version"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/aboutus_ed"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/aboutus_version"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Beta 6.1"
                    android:textSize="12sp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/aboutus_update_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:background="@drawable/btn_aboutus"
            android:layout_marginBottom="5dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="13dp"
                android:src="@mipmap/up_log"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/aboutus_log"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>